--- a/city-hotels.html
+++ b/city-hotels.html
@@ -107,7 +107,7 @@
       <div class="luxury-wrap" data-aos="fade-up">
          <div class="luxury-left" data-aos="fade-right">
             <div class="luxury-img">
-              <a href="https://www.hotelkamp.com/en/?gad_source=1&gclid=CjwKCAjw_ZC2BhAQEiwAXSgCljDE0_6hZido7y6YrlyLiUfkKrXJpxjHM_9XRIyBRQLz-kTO4Rb3uhoC6-QQAvD_BwE" target="_blank">
+              <a href="javascript:void(0)">
                 <img src="assets/images/City-Card-1.jpg" alt="">
               </a>
             </div>
@@ -115,7 +115,7 @@
          <div class="luxury-right" data-aos="fade-left">
             <div class="luxury-text">
                <h3>
-                <a href="https://www.hotelkamp.com/en/?gad_source=1&gclid=CjwKCAjw_ZC2BhAQEiwAXSgCljDE0_6hZido7y6YrlyLiUfkKrXJpxjHM_9XRIyBRQLz-kTO4Rb3uhoC6-QQAvD_BwE" target="_blank">
+                <a href="javascript:void(0)">
                     Hotel Kämp
                 </a>
                </h3>
@@ -159,7 +159,7 @@
                 </a>
 
 
-                <a href="https://www.hotelkamp.com/en/?gad_source=1&gclid=CjwKCAjw_ZC2BhAQEiwAXSgCljDE0_6hZido7y6YrlyLiUfkKrXJpxjHM_9XRIyBRQLz-kTO4Rb3uhoC6-QQAvD_BwE" target="_blank" class="button-82-pushable" role="button">
+                <a href="https://www.expedia.com/Helsinki-Hotels-Hotel-Kamp.h220671.Hotel-Information?chkin=2024-09-27&chkout=2024-10-03&flexibility=6_DAY_LOWER&flexibility=7_DAY_UPPER&searchRange=2024-08-01_2024-08-31&searchRange=2024-09-01_2024-09-30&searchRange=2024-10-01_2024-10-31&searchRange=2024-11-01_2024-11-30&searchRange=2024-12-01_2024-12-31&searchRange=2025-01-01_2025-01-31&flexibleSearchRequirement=INCLUDE_WEEKEND&x_pwa=1&rfrr=HSR&pwa_ts=1724331534151&referrerUrl=aHR0cHM6Ly93d3cuZXhwZWRpYS5jb20vSG90ZWwtU2VhcmNo&useRewards=true&rm1=a2&regionId=1443&destination=Helsinki%2C+Uusimaa%2C+Finland&destType=MARKET&neighborhoodId=6361129&selected=220671&latLong=60.16785%2C24.94729&sort=RECOMMENDED&top_dp=338&top_cur=USD&userIntent=&selectedRoomType=202322759&selectedRatePlan=230215272&searchId=c882508b-9c85-4049-9d5a-e762698c55f4&propertyName=Hotel+Kamp&clickref=1100lzz5iKEX&affcid=US.DIRECT.PHG.1100l364263.0&ref_id=1100lzz5iKEX&my_ad=AFF.US.DIRECT.PHG.1100l364263.0&afflid=1100lzz5iKEX" target="_blank" class="button-82-pushable" role="button">
                   <span class="button-82-shadow"></span>
                   <span class="button-82-edge"></span>
                   <span class="button-82-front text">
@@ -177,7 +177,7 @@
       <div class="luxury-wrap" data-aos="fade-up">
         <div class="luxury-left" data-aos="fade-right">
            <div class="luxury-img">
-             <a href="https://www.hotelhaven.fi/en/?gad_source=1&gclid=CjwKCAjw_ZC2BhAQEiwAXSgCluc6MonyzWIuAbymj4s_FsGPrMFv-7HhHRQRzJh-3JqNeaWdDnSqSxoCPQkQAvD_BwE" target="_blank">
+             <a href="javascript:void(0)">
                <img src="assets/images/City-Card-2.jpg" alt="">
              </a>
            </div>
@@ -185,7 +185,7 @@
         <div class="luxury-right" data-aos="fade-left">
            <div class="luxury-text">
               <h3>
-               <a href="https://www.hotelhaven.fi/en/?gad_source=1&gclid=CjwKCAjw_ZC2BhAQEiwAXSgCluc6MonyzWIuAbymj4s_FsGPrMFv-7HhHRQRzJh-3JqNeaWdDnSqSxoCPQkQAvD_BwE" target="_blank">
+               <a href="javascript:void(0)">
                 Hotel Haven
                </a>
               </h3>
@@ -229,7 +229,7 @@
                </a>
 
 
-               <a href="https://www.hotelhaven.fi/en/?gad_source=1&gclid=CjwKCAjw_ZC2BhAQEiwAXSgCluc6MonyzWIuAbymj4s_FsGPrMFv-7HhHRQRzJh-3JqNeaWdDnSqSxoCPQkQAvD_BwE" target="_blank" class="button-82-pushable" role="button">
+               <a href="https://www.expedia.com/Helsinki-Hotels-Hotel-Haven.h2233290.Hotel-Information?chkin=2024-10-21&chkout=2024-10-27&flexibility=6_DAY_LOWER&flexibility=7_DAY_UPPER&searchRange=2024-08-01_2024-08-31&searchRange=2024-09-01_2024-09-30&searchRange=2024-10-01_2024-10-31&searchRange=2024-11-01_2024-11-30&searchRange=2024-12-01_2024-12-31&searchRange=2025-01-01_2025-01-31&flexibleSearchRequirement=INCLUDE_WEEKEND&x_pwa=1&rfrr=HSR&pwa_ts=1724333671482&referrerUrl=aHR0cHM6Ly93d3cuZXhwZWRpYS5jb20vSG90ZWwtU2VhcmNo&useRewards=true&rm1=a2&regionId=1443&destination=Helsinki%2C+Uusimaa%2C+Finland&destType=MARKET&neighborhoodId=6361129&selected=2233290&latLong=60.169857%2C24.938379&sort=RECOMMENDED&top_dp=142&top_cur=USD&userIntent=&selectedRoomType=314918856&selectedRatePlan=383556629&searchId=0f50d617-c560-4427-90ec-4bad41f0fa9d&propertyName=Hotel+Haven&clickref=1011lzEpZ6CB&affcid=US.DIRECT.PHG.1100l364263.0&ref_id=1011lzEpZ6CB&my_ad=AFF.US.DIRECT.PHG.1100l364263.0&afflid=1011lzEpZ6CB" target="_blank" class="button-82-pushable" role="button">
                  <span class="button-82-shadow"></span>
                  <span class="button-82-edge"></span>
                  <span class="button-82-front text">
@@ -248,7 +248,7 @@
      <div class="luxury-wrap" data-aos="fade-up">
         <div class="luxury-left" data-aos="fade-right">
            <div class="luxury-img">
-             <a href="https://clarionhotel.fi/" target="_blank">
+             <a href="javascript:void(0)">
                <img src="assets/images/City-Card-3.jpg" alt="">
              </a>
            </div>
@@ -256,7 +256,7 @@
         <div class="luxury-right" data-aos="fade-left">
            <div class="luxury-text">
               <h3>
-               <a href="https://clarionhotel.fi/" target="_blank">
+               <a href="javascript:void(0)">
                 Clarion Hotel Helsinki
                </a>
               </h3>
@@ -300,7 +300,7 @@
                </a>
 
 
-               <a href="https://clarionhotel.fi/" target="_blank" class="button-82-pushable" role="button">
+               <a href="https://www.expedia.com/Helsinki-Hotels-Clarion-Hotel-Helsinki.h12923918.Hotel-Information?chkin=2024-09-03&chkout=2024-09-09&flexibility=6_DAY_LOWER&flexibility=7_DAY_UPPER&searchRange=2024-08-01_2024-08-31&searchRange=2024-09-01_2024-09-30&searchRange=2024-10-01_2024-10-31&searchRange=2024-11-01_2024-11-30&searchRange=2024-12-01_2024-12-31&searchRange=2025-01-01_2025-01-31&flexibleSearchRequirement=INCLUDE_WEEKEND&x_pwa=1&rfrr=HSR&pwa_ts=1724333700506&referrerUrl=aHR0cHM6Ly93d3cuZXhwZWRpYS5jb20vSG90ZWwtU2VhcmNo&useRewards=true&rm1=a2&regionId=1443&destination=Helsinki%2C+Uusimaa%2C+Finland&destType=MARKET&neighborhoodId=704820373827780608&selected=12923918&latLong=60.169857%2C24.938379&sort=RECOMMENDED&top_dp=134&top_cur=USD&userIntent=&selectedRoomType=201421961&selectedRatePlan=207038591&searchId=ae90bf6e-4a56-4d8c-a4c6-74ddd5ff0da7&propertyName=Clarion+Hotel+Helsinki&clickref=1101lzEkYokd&affcid=US.DIRECT.PHG.1100l364263.0&ref_id=1101lzEkYokd&my_ad=AFF.US.DIRECT.PHG.1100l364263.0&afflid=1101lzEkYokd" target="_blank" class="button-82-pushable" role="button">
                  <span class="button-82-shadow"></span>
                  <span class="button-82-edge"></span>
                  <span class="button-82-front text">
@@ -319,7 +319,7 @@
      <div class="luxury-wrap" data-aos="fade-up">
         <div class="luxury-left" data-aos="fade-right">
            <div class="luxury-img">
-             <a href="https://www.radissonhotels.com/en-us/hotels/radisson-blu-helsinki-aleksanteri" target="_blank">
+             <a href="javascript:void(0)">
                <img src="assets/images/City-Card-4.jpg" alt="">
              </a>
            </div>
@@ -327,7 +327,7 @@
         <div class="luxury-right" data-aos="fade-left">
            <div class="luxury-text">
               <h3>
-               <a href="https://www.radissonhotels.com/en-us/hotels/radisson-blu-helsinki-aleksanteri" target="_blank">
+               <a href="javascript:void(0)">
                 Radisson Blu Aleksanteri Hotel
                </a>
               </h3>
@@ -371,7 +371,7 @@
                </a>
 
 
-               <a href="https://www.radissonhotels.com/en-us/hotels/radisson-blu-helsinki-aleksanteri" target="_blank" class="button-82-pushable" role="button">
+               <a href="https://www.expedia.com/Helsinki-Hotels-Radisson-Blu-Aleksanteri-Hotel.h1916162.Hotel-Information?chkin=2025-01-07&chkout=2025-01-13&flexibility=6_DAY_LOWER&flexibility=7_DAY_UPPER&searchRange=2024-08-01_2024-08-31&searchRange=2024-09-01_2024-09-30&searchRange=2024-10-01_2024-10-31&searchRange=2024-11-01_2024-11-30&searchRange=2024-12-01_2024-12-31&searchRange=2025-01-01_2025-01-31&flexibleSearchRequirement=INCLUDE_WEEKEND&x_pwa=1&rfrr=HSR&pwa_ts=1724333728178&referrerUrl=aHR0cHM6Ly93d3cuZXhwZWRpYS5jb20vSG90ZWwtU2VhcmNo&useRewards=true&rm1=a2&regionId=1443&destination=Helsinki%2C+Uusimaa%2C+Finland&destType=MARKET&neighborhoodId=553248635976401029&selected=1916162&latLong=60.169857%2C24.938379&sort=RECOMMENDED&top_dp=109&top_cur=USD&userIntent=&selectedRoomType=314307428&selectedRatePlan=382950086&searchId=04d3cf48-1ee1-42ef-81fb-6dff979923bc&propertyName=Radisson+Blu+Aleksanteri+Hotel%2C+Helsinki&clickref=1101lzEkYpRG&affcid=US.DIRECT.PHG.1100l364263.0&ref_id=1101lzEkYpRG&my_ad=AFF.US.DIRECT.PHG.1100l364263.0&afflid=1101lzEkYpRG" target="_blank" class="button-82-pushable" role="button">
                  <span class="button-82-shadow"></span>
                  <span class="button-82-edge"></span>
                  <span class="button-82-front text">
@@ -390,7 +390,7 @@
      <div class="luxury-wrap" data-aos="fade-up">
         <div class="luxury-left" data-aos="fade-right"> 
            <div class="luxury-img">
-             <a href="https://www.glohotels.fi/en/" target="_blank">
+             <a href="javascript:void(0)">
                <img src="assets/images/City-Card-5.jpg" alt="">
              </a>
            </div>
@@ -398,7 +398,7 @@
         <div class="luxury-right" data-aos="fade-left">
            <div class="luxury-text">
               <h3>
-               <a href="https://www.glohotels.fi/en/" target="_blank">
+               <a href="javascript:void(0)">
                 Hotel Glo
                </a>
               </h3>
@@ -443,7 +443,7 @@
                </a>
 
 
-               <a href="https://www.glohotels.fi/en/" target="_blank" class="button-82-pushable" role="button">
+               <a href="https://www.expedia.com/Helsinki-Hotels-GLO-Hotel-Art.h44571.Hotel-Information?chkin=2024-10-23&chkout=2024-10-29&flexibility=6_DAY_LOWER&flexibility=7_DAY_UPPER&searchRange=2024-08-01_2024-08-31&searchRange=2024-09-01_2024-09-30&searchRange=2024-10-01_2024-10-31&searchRange=2024-11-01_2024-11-30&searchRange=2024-12-01_2024-12-31&searchRange=2025-01-01_2025-01-31&flexibleSearchRequirement=INCLUDE_WEEKEND&x_pwa=1&rfrr=HSR&pwa_ts=1724333766517&referrerUrl=aHR0cHM6Ly93d3cuZXhwZWRpYS5jb20vSG90ZWwtU2VhcmNo&useRewards=true&rm1=a2&regionId=1443&destination=Helsinki%2C+Uusimaa%2C+Finland&destType=MARKET&neighborhoodId=553248635976401029&selected=44571&latLong=60.169857%2C24.938379&sort=RECOMMENDED&top_dp=112&top_cur=USD&userIntent=&selectedRoomType=201830778&selectedRatePlan=232203304&searchId=40420c5c-1c30-4bfc-924e-242064e6e0d8&propertyName=GLO+Hotel+Art&clickref=1011lzEpZbmg&affcid=US.DIRECT.PHG.1100l364263.0&ref_id=1011lzEpZbmg&my_ad=AFF.US.DIRECT.PHG.1100l364263.0&afflid=1011lzEpZbmg" target="_blank" class="button-82-pushable" role="button">
                  <span class="button-82-shadow"></span>
                  <span class="button-82-edge"></span>
                  <span class="button-82-front text">
@@ -461,7 +461,7 @@
      <div class="luxury-wrap" data-aos="fade-up">
         <div class="luxury-left" data-aos="fade-right">
            <div class="luxury-img">
-             <a href="https://www.hotelarthur.fi/en/" target="_blank">
+             <a href="javascript:void(0)">
                <img src="assets/images/City-Card-6.jpg" alt="">
              </a>
            </div>
@@ -469,7 +469,7 @@
         <div class="luxury-right" data-aos="fade-left">
            <div class="luxury-text">
               <h3>
-               <a href="https://www.hotelarthur.fi/en/" target="_blank">
+               <a href="javascript:void(0)">
                 Hotel Arthur
                </a>
               </h3>
@@ -512,7 +512,7 @@
                </a>
 
 
-               <a href="https://www.hotelarthur.fi/en/" target="_blank" class="button-82-pushable" role="button">
+               <a href="https://www.expedia.com/Helsinki-Hotels-Hotel-Arthur.h15378.Hotel-Information?chkin=2024-12-06&chkout=2024-12-12&flexibility=6_DAY_LOWER&flexibility=7_DAY_UPPER&searchRange=2024-08-01_2024-08-31&searchRange=2024-09-01_2024-09-30&searchRange=2024-10-01_2024-10-31&searchRange=2024-11-01_2024-11-30&searchRange=2024-12-01_2024-12-31&searchRange=2025-01-01_2025-01-31&flexibleSearchRequirement=INCLUDE_WEEKEND&x_pwa=1&rfrr=HSR&pwa_ts=1724333792526&referrerUrl=aHR0cHM6Ly93d3cuZXhwZWRpYS5jb20vSG90ZWwtU2VhcmNo&useRewards=true&rm1=a2&regionId=1443&destination=Helsinki%2C+Uusimaa%2C+Finland&destType=MARKET&neighborhoodId=553248635964998477&selected=15378&latLong=60.169857%2C24.938379&sort=RECOMMENDED&top_dp=98&top_cur=USD&userIntent=&selectedRoomType=276161&selectedRatePlan=383439388&searchId=b3c11704-f783-4060-94ba-e9ae30bf017a&propertyName=Hotel+Arthur&clickref=1101lzEkYBXC&affcid=US.DIRECT.PHG.1100l364263.0&ref_id=1101lzEkYBXC&my_ad=AFF.US.DIRECT.PHG.1100l364263.0&afflid=1101lzEkYBXC" target="_blank" class="button-82-pushable" role="button">
                  <span class="button-82-shadow"></span>
                  <span class="button-82-edge"></span>
                  <span class="button-82-front text">
@@ -531,7 +531,7 @@
      <div class="luxury-wrap" data-aos="fade-up">
         <div class="luxury-left" data-aos="fade-right">
            <div class="luxury-img">
-             <a href="https://www.scandichotels.fi/hotellit/suomi/helsinki/scandic-simonkentta" target="_blank">
+             <a href="javascript:void(0)">
                <img src="assets/images/City-Card-7.webp" alt="">
              </a>
            </div>
@@ -539,7 +539,7 @@
         <div class="luxury-right" data-aos="fade-left">
            <div class="luxury-text">
               <h3>
-               <a href="https://www.scandichotels.fi/hotellit/suomi/helsinki/scandic-simonkentta" target="_blank">
+               <a href="javascript:void(0)">
                 Scandic Simonkenttä
                </a>
               </h3>
@@ -583,7 +583,7 @@
                </a>
 
 
-               <a href="https://www.scandichotels.fi/hotellit/suomi/helsinki/scandic-simonkentta" target="_blank" class="button-82-pushable" role="button">
+               <a href="https://www.expedia.com/Helsinki-Hotels-Scandic-Simonkentta.h551434.Hotel-Information?chkin=2025-01-01&chkout=2025-01-07&flexibility=6_DAY_LOWER&flexibility=7_DAY_UPPER&searchRange=2024-08-01_2024-08-31&searchRange=2024-09-01_2024-09-30&searchRange=2024-10-01_2024-10-31&searchRange=2024-11-01_2024-11-30&searchRange=2024-12-01_2024-12-31&searchRange=2025-01-01_2025-01-31&flexibleSearchRequirement=INCLUDE_WEEKEND&x_pwa=1&rfrr=HSR&pwa_ts=1724333820516&referrerUrl=aHR0cHM6Ly93d3cuZXhwZWRpYS5jb20vSG90ZWwtU2VhcmNo&useRewards=true&rm1=a2&regionId=1443&destination=Helsinki%2C+Uusimaa%2C+Finland&destType=MARKET&neighborhoodId=6278775&selected=551434&latLong=60.169857%2C24.938379&sort=RECOMMENDED&top_dp=113&top_cur=USD&userIntent=&selectedRoomType=314079234&selectedRatePlan=382188075&searchId=09d8db8b-ea46-41b3-8578-ef342c164b5e&propertyName=Scandic+Simonkentt%C3%A4&clickref=1101lzEkYE2k&affcid=US.DIRECT.PHG.1100l364263.0&ref_id=1101lzEkYE2k&my_ad=AFF.US.DIRECT.PHG.1100l364263.0&afflid=1101lzEkYE2k" target="_blank" class="button-82-pushable" role="button">
                  <span class="button-82-shadow"></span>
                  <span class="button-82-edge"></span>
                  <span class="button-82-front text">
@@ -601,7 +601,7 @@
      <div class="luxury-wrap" data-aos="fade-up">
         <div class="luxury-left" data-aos="fade-right">
            <div class="luxury-img">
-             <a href="https://hotellifinn.fi/en/home/" target="_blank">
+             <a href="javascript:void(0)">
                <img src="assets/images/City-Card-8.jpg" alt="">
              </a>
            </div>
@@ -609,7 +609,7 @@
         <div class="luxury-right" data-aos="fade-left">
            <div class="luxury-text">
               <h3>
-               <a href="https://hotellifinn.fi/en/home/" target="_blank">
+               <a href="javascript:void(0)">
                 Hotel Finn
                </a>
               </h3>
@@ -652,7 +652,7 @@
                </a>
 
 
-               <a href="https://hotellifinn.fi/en/home/" target="_blank" class="button-82-pushable" role="button">
+               <a href="https://www.expedia.com/Helsinki-Hotels-Hotel-Finn.h4137041.Hotel-Information?chkin=2024-12-20&chkout=2024-12-26&flexibility=6_DAY_LOWER&flexibility=7_DAY_UPPER&searchRange=2024-08-01_2024-08-31&searchRange=2024-09-01_2024-09-30&searchRange=2024-10-01_2024-10-31&searchRange=2024-11-01_2024-11-30&searchRange=2024-12-01_2024-12-31&searchRange=2025-01-01_2025-01-31&flexibleSearchRequirement=INCLUDE_WEEKEND&x_pwa=1&rfrr=HSR&pwa_ts=1724333854342&referrerUrl=aHR0cHM6Ly93d3cuZXhwZWRpYS5jb20vSG90ZWwtU2VhcmNo&useRewards=true&rm1=a2&regionId=1443&destination=Helsinki%2C+Uusimaa%2C+Finland&destType=MARKET&neighborhoodId=6278775&selected=4137041&latLong=60.169857%2C24.938379&sort=RECOMMENDED&top_dp=93&top_cur=USD&userIntent=&selectedRoomType=200065039&selectedRatePlan=200367218&searchId=560376e5-645b-48b4-8026-05814b1e5b5e&propertyName=Hotel+Finn&clickref=1011lzEpZkRx&affcid=US.DIRECT.PHG.1100l364263.0&ref_id=1011lzEpZkRx&my_ad=AFF.US.DIRECT.PHG.1100l364263.0&afflid=1011lzEpZkRx" target="_blank" class="button-82-pushable" role="button">
                  <span class="button-82-shadow"></span>
                  <span class="button-82-edge"></span>
                  <span class="button-82-front text">
@@ -670,7 +670,7 @@
      <div class="luxury-wrap" data-aos="fade-up">
         <div class="luxury-left" data-aos="fade-right">
            <div class="luxury-img">
-             <a href="https://hotelf6.fi/?gad_source=1&gclid=CjwKCAjw_ZC2BhAQEiwAXSgClrgk7Ru8T-ix3lxAU-962UyU6s8rLH18uvWbyVEnSqRUxHYvtAd8qBoCAcsQAvD_BwE" target="_blank">
+             <a href="javascript:void(0)">
                <img src="assets/images/City-Card-9.jpg" alt="">
              </a>
            </div>
@@ -678,7 +678,7 @@
         <div class="luxury-right" data-aos="fade-left">
            <div class="luxury-text">
               <h3>
-               <a href="https://hotelf6.fi/?gad_source=1&gclid=CjwKCAjw_ZC2BhAQEiwAXSgClrgk7Ru8T-ix3lxAU-962UyU6s8rLH18uvWbyVEnSqRUxHYvtAd8qBoCAcsQAvD_BwE" target="_blank">
+               <a href="javascript:void(0)">
                 Hotel F6
                </a>
               </h3>
