--- a/scenic-retreats.html
+++ b/scenic-retreats.html
@@ -105,7 +105,7 @@
       <div class="luxury-wrap" data-aos="fade-up">
          <div class="luxury-left" data-aos="fade-right">
             <div class="luxury-img">
-              <a href="https://www.kakslauttanen.fi/" target="_blank">
+              <a href="" target="_blank">
                 <img src="assets/images/Scenic-Card-1.avif" alt="">
               </a>
             </div>
@@ -113,7 +113,7 @@
          <div class="luxury-right" data-aos="fade-left">
             <div class="luxury-text">
                <h3>
-                <a href="https://www.kakslauttanen.fi/" target="_blank">
+                <a href="" target="_blank">
                     Kakslauttanen Arctic Resort
                 </a>
                </h3>
@@ -157,7 +157,7 @@
                 </a>
 
 
-                <a href="https://www.kakslauttanen.fi/" target="_blank" class="button-82-pushable" role="button">
+                <a href="https://www.expedia.com/Sodankyla-Hotels-Kakslauttanen-Arctic-Resort.h12318138.Hotel-Information?chkin=2024-08-24&chkout=2024-08-30&flexibility=6_DAY_LOWER&flexibility=7_DAY_UPPER&searchRange=2024-08-01_2024-08-31&searchRange=2024-09-01_2024-09-30&searchRange=2024-10-01_2024-10-31&searchRange=2024-11-01_2024-11-30&searchRange=2024-12-01_2024-12-31&searchRange=2025-01-01_2025-01-31&flexibleSearchRequirement=INCLUDE_WEEKEND&x_pwa=1&rfrr=HSR&pwa_ts=1724334214631&referrerUrl=aHR0cHM6Ly93d3cuZXhwZWRpYS5jb20vSG90ZWwtU2VhcmNo&useRewards=true&rm1=a2&regionId=3244&destination=Sodankyla%2C+Lapland%2C+Finland&destType=MARKET&selected=12318138&latLong=68.334812%2C27.335087&sort=RECOMMENDED&top_dp=170&top_cur=USD&userIntent=&selectedRoomType=219034179&selectedRatePlan=280235529&searchId=8be4f470-d50f-4ff9-9ab9-a4a08270ae74&propertyName=Kakslauttanen+Arctic+Resort&clickref=1011lzEpZrT2&affcid=US.DIRECT.PHG.1100l364263.0&ref_id=1011lzEpZrT2&my_ad=AFF.US.DIRECT.PHG.1100l364263.0&afflid=1011lzEpZrT2" target="_blank" class="button-82-pushable" role="button">
                   <span class="button-82-shadow"></span>
                   <span class="button-82-edge"></span>
                   <span class="button-82-front text">
@@ -176,7 +176,7 @@
       <div class="luxury-wrap" data-aos="fade-up">
         <div class="luxury-left" data-aos="fade-right">
            <div class="luxury-img">
-             <a href="https://hotelli-isosyote.fi/en/" target="_blank">
+             <a href="" target="_blank">
                <img src="assets/images/Scenic-Card-2.jpg" alt="">
              </a>
            </div>
@@ -184,7 +184,7 @@
         <div class="luxury-right" data-aos="fade-left">
            <div class="luxury-text">
               <h3>
-               <a href="https://hotelli-isosyote.fi/en/" target="_blank">
+               <a href="" target="_blank">
                 Hotel Iso-Syöte
                </a>
               </h3>
@@ -227,7 +227,7 @@
                </a>
 
 
-               <a href="https://hotelli-isosyote.fi/en/" target="_blank" class="button-82-pushable" role="button">
+               <a href="https://www.expedia.com/Pudasjarvi-Hotels-Hotelli-Iso-Syote-Safari.h33407891.Hotel-Information?chkin=2024-10-19&chkout=2024-10-25&flexibility=6_DAY_LOWER&flexibility=7_DAY_UPPER&searchRange=2024-08-01_2024-08-31&searchRange=2024-09-01_2024-09-30&searchRange=2024-10-01_2024-10-31&searchRange=2024-11-01_2024-11-30&searchRange=2024-12-01_2024-12-31&searchRange=2025-01-01_2025-01-31&flexibleSearchRequirement=INCLUDE_WEEKEND&x_pwa=1&rfrr=HSR&pwa_ts=1724334239030&referrerUrl=aHR0cHM6Ly93d3cuZXhwZWRpYS5jb20vSG90ZWwtU2VhcmNo&useRewards=true&rm1=a2&regionId=3000478614&destination=Pudasj%C3%A4rvi%2C+Northern+Ostrobothnia%2C+Finland&destType=MARKET&selected=33407891&latLong=65.370209%2C26.991619&sort=RECOMMENDED&top_dp=151&top_cur=USD&userIntent=&selectedRoomType=213626303&selectedRatePlan=244214901&searchId=e63bc27b-29e7-4045-b542-3ee94e775c23&propertyName=Hotel+Iso-Sy%C3%B6te&clickref=1011lzEpZtmn&affcid=US.DIRECT.PHG.1100l364263.0&ref_id=1011lzEpZtmn&my_ad=AFF.US.DIRECT.PHG.1100l364263.0&afflid=1011lzEpZtmn" target="_blank" class="button-82-pushable" role="button">
                  <span class="button-82-shadow"></span>
                  <span class="button-82-edge"></span>
                  <span class="button-82-front text">
@@ -384,7 +384,7 @@
    <div class="luxury-wrap" data-aos="fade-up">
     <div class="luxury-left" data-aos="fade-right">
        <div class="luxury-img">
-         <a href="https://arctictreehousehotel.com/" target="_blank">
+         <a href="" target="_blank">
            <img src="assets/images/Scenic-Card-5.jpg" alt="">
          </a>
        </div>
@@ -392,7 +392,7 @@
     <div class="luxury-right" data-aos="fade-left">
        <div class="luxury-text">
           <h3>
-           <a href="https://arctictreehousehotel.com/" target="_blank">
+           <a href="" target="_blank">
             Arctic TreeHouse Hotel
            </a>
           </h3>
@@ -435,7 +435,7 @@
            </a>
 
 
-           <a href="https://arctictreehousehotel.com/" target="_blank" class="button-82-pushable" role="button">
+           <a href="https://www.expedia.com/Rovaniemi-Hotels-Arctic-TreeHouse-Hotel.h29968502.Hotel-Information?chkin=2024-09-09&chkout=2024-09-15&flexibility=6_DAY_LOWER&flexibility=7_DAY_UPPER&searchRange=2024-08-01_2024-08-31&searchRange=2024-09-01_2024-09-30&searchRange=2024-10-01_2024-10-31&searchRange=2024-11-01_2024-11-30&searchRange=2024-12-01_2024-12-31&searchRange=2025-01-01_2025-01-31&flexibleSearchRequirement=INCLUDE_WEEKEND&x_pwa=1&rfrr=HSR&pwa_ts=1724334318533&referrerUrl=aHR0cHM6Ly93d3cuZXhwZWRpYS5jb20vSG90ZWwtU2VhcmNo&useRewards=true&rm1=a2&regionId=3059&destination=Rovaniemi%2C+Rovaniemi%2C+Lapland%2C+Finland&destType=MARKET&selected=29968502&latLong=66.53974%2C25.80173&sort=RECOMMENDED&top_dp=159&top_cur=USD&userIntent=&selectedRoomType=219369055&selectedRatePlan=282248889&searchId=124f2aa1-7986-45f9-946d-85b84ace6ebe&propertyName=Arctic+TreeHouse+Hotel&clickref=1101lzEkZfDf&affcid=US.DIRECT.PHG.1100l364263.0&ref_id=1101lzEkZfDf&my_ad=AFF.US.DIRECT.PHG.1100l364263.0&afflid=1101lzEkZfDf" target="_blank" class="button-82-pushable" role="button">
              <span class="button-82-shadow"></span>
              <span class="button-82-edge"></span>
              <span class="button-82-front text">
@@ -454,7 +454,7 @@
  <div class="luxury-wrap" data-aos="fade-up">
   <div class="luxury-left" data-aos="fade-right">
      <div class="luxury-img">
-       <a href="https://www.saariselkainn.fi/fi/" target="_blank">
+       <a href="" target="_blank">
          <img src="assets/images/Scenic-Card-6.jpg" alt="">
        </a>
      </div>
@@ -462,7 +462,7 @@
   <div class="luxury-right" data-aos="fade-left">
      <div class="luxury-text">
         <h3>
-         <a href="https://www.saariselkainn.fi/fi/" target="_blank">
+         <a href="" target="_blank">
           Saariselkä Inn
          </a>
         </h3>
@@ -505,7 +505,7 @@
          </a>
 
 
-         <a href="https://www.saariselkainn.fi/fi/" target="_blank" class="button-82-pushable" role="button">
+         <a href="https://www.expedia.com/Saariselka-Hotels-Saariselka-Inn.h22161803.Hotel-Information?chkin=2024-08-24&chkout=2024-08-30&flexibility=6_DAY_LOWER&flexibility=7_DAY_UPPER&searchRange=2024-08-01_2024-08-31&searchRange=2024-09-01_2024-09-30&searchRange=2024-10-01_2024-10-31&searchRange=2024-11-01_2024-11-30&searchRange=2024-12-01_2024-12-31&searchRange=2025-01-01_2025-01-31&flexibleSearchRequirement=INCLUDE_WEEKEND&x_pwa=1&rfrr=HSR&pwa_ts=1724334349193&referrerUrl=aHR0cHM6Ly93d3cuZXhwZWRpYS5jb20vSG90ZWwtU2VhcmNo&useRewards=true&rm1=a2&regionId=500389&destination=Saariselka%2C+Lapland%2C+Finland&destType=MARKET&selected=22161803&latLong=68.422092%2C27.417686&sort=RECOMMENDED&top_dp=91&top_cur=USD&userIntent=&selectedRoomType=202421675&selectedRatePlan=212306295&searchId=ee216874-15f3-41b8-ad10-9a42585f55f6&propertyName=Saariselk%C3%A4+Inn&clickref=1101lzEkZhxq&affcid=US.DIRECT.PHG.1100l364263.0&ref_id=1101lzEkZhxq&my_ad=AFF.US.DIRECT.PHG.1100l364263.0&afflid=1101lzEkZhxq" target="_blank" class="button-82-pushable" role="button">
            <span class="button-82-shadow"></span>
            <span class="button-82-edge"></span>
            <span class="button-82-front text">
@@ -524,7 +524,7 @@
 <div class="luxury-wrap" data-aos="fade-up">
   <div class="luxury-left" data-aos="fade-right">
      <div class="luxury-img">
-       <a href="https://www.scandichotels.com/hotels/finland/rovaniemi/scandic-pohjanhovi" target="_blank">
+       <a href="" target="_blank">
          <img src="assets/images/Scenic-Card-7.jpg" alt="">
        </a>
      </div>
@@ -532,7 +532,7 @@
   <div class="luxury-right" data-aos="fade-left">
      <div class="luxury-text">
         <h3>
-         <a href="https://www.scandichotels.com/hotels/finland/rovaniemi/scandic-pohjanhovi" target="_blank">
+         <a href="" target="_blank">
           Hotel Rantasipi Pohjanhovi
          </a>
         </h3>
@@ -575,7 +575,7 @@
          </a>
 
 
-         <a href="https://www.scandichotels.com/hotels/finland/rovaniemi/scandic-pohjanhovi" target="_blank" class="button-82-pushable" role="button">
+         <a href="https://www.expedia.com/Rovaniemi-Hotels-Scandic-Pohjanhovi.h53384.Hotel-Information?chkin=2024-09-27&chkout=2024-10-04&flexibility=6_DAY_LOWER&flexibility=7_DAY_UPPER&searchRange=2024-08-01_2024-08-31&searchRange=2024-09-01_2024-09-30&searchRange=2024-10-01_2024-10-31&searchRange=2024-11-01_2024-11-30&searchRange=2024-12-01_2024-12-31&searchRange=2025-01-01_2025-01-31&flexibleSearchRequirement=INCLUDE_WEEKEND&x_pwa=1&rfrr=HSR&pwa_ts=1724334379508&referrerUrl=aHR0cHM6Ly93d3cuZXhwZWRpYS5jb20vSG90ZWwtU2VhcmNo&useRewards=true&rm1=a2&regionId=3059&destination=Rovaniemi%2C+Rovaniemi%2C+Lapland%2C+Finland&destType=MARKET&selected=53384&latLong=66.503964%2C25.729528&sort=RECOMMENDED&top_dp=141&top_cur=USD&userIntent=&selectedRoomType=213002259&selectedRatePlan=240037100&searchId=5ebd6c84-6edd-436f-889f-b91cbc438a7d&propertyName=Scandic+Pohjanhovi&clickref=1101lzEkZnMh&affcid=US.DIRECT.PHG.1100l364263.0&ref_id=1101lzEkZnMh&my_ad=AFF.US.DIRECT.PHG.1100l364263.0&afflid=1101lzEkZnMh" target="_blank" class="button-82-pushable" role="button">
            <span class="button-82-shadow"></span>
            <span class="button-82-edge"></span>
            <span class="button-82-front text">
@@ -664,7 +664,7 @@
 <div class="luxury-wrap" data-aos="fade-up">
   <div class="luxury-left" data-aos="fade-right">
      <div class="luxury-img">
-       <a href="https://www.laplandhotels.com/FI/lapin-hotellit/yllas/lapland-hotels-saaga/kylpyla.html" target="_blank">
+       <a href="" target="_blank">
          <img src="assets/images/Scenic-Card-9.jpg" alt="">
        </a>
      </div>
@@ -672,7 +672,7 @@
   <div class="luxury-right" data-aos="fade-left">
      <div class="luxury-text">
         <h3>
-         <a href="https://www.laplandhotels.com/FI/lapin-hotellit/yllas/lapland-hotels-saaga/kylpyla.html" target="_blank">
+         <a href="" target="_blank">
           Ylläs Saaga
          </a>
         </h3>
@@ -715,7 +715,7 @@
          </a>
 
 
-         <a href="https://www.laplandhotels.com/FI/lapin-hotellit/yllas/lapland-hotels-saaga/kylpyla.html" target="_blank" class="button-82-pushable" role="button">
+         <a href="https://www.expedia.com/Kittila-Hotels-Lapland-Hotels-Saaga.h7760823.Hotel-Information?chkin=2024-09-16&chkout=2024-09-22&flexibility=6_DAY_LOWER&flexibility=7_DAY_UPPER&searchRange=2024-08-01_2024-08-31&searchRange=2024-09-01_2024-09-30&searchRange=2024-10-01_2024-10-31&searchRange=2024-11-01_2024-11-30&searchRange=2024-12-01_2024-12-31&searchRange=2025-01-01_2025-01-31&flexibleSearchRequirement=INCLUDE_WEEKEND&x_pwa=1&rfrr=HSR&pwa_ts=1724334438542&referrerUrl=aHR0cHM6Ly93d3cuZXhwZWRpYS5jb20vSG90ZWwtU2VhcmNo&useRewards=true&rm1=a2&regionId=3000040459&destination=Kolari%2C+Lapland%2C+Finland&destType=MARKET&selected=7760823&latLong=67.333298%2C23.799999&sort=RECOMMENDED&top_dp=127&top_cur=USD&userIntent=&selectedRoomType=200619677&selectedRatePlan=204526989&searchId=0c7681cd-85e2-45ae-8cf3-c948d11036f3&propertyName=Lapland+Hotels+Saaga&clickref=1100lzz5k6mU&affcid=US.DIRECT.PHG.1100l364263.0&ref_id=1100lzz5k6mU&my_ad=AFF.US.DIRECT.PHG.1100l364263.0&afflid=1100lzz5k6mU" target="_blank" class="button-82-pushable" role="button">
            <span class="button-82-shadow"></span>
            <span class="button-82-edge"></span>
            <span class="button-82-front text">
