--- a/scenic-retreats.html
+++ b/scenic-retreats.html
@@ -105,7 +105,7 @@
       <div class="luxury-wrap" data-aos="fade-up">
          <div class="luxury-left" data-aos="fade-right">
             <div class="luxury-img">
-              <a href="" target="_blank">
+              <a href="javascript:void(0)">
                 <img src="assets/images/Scenic-Card-1.avif" alt="">
               </a>
             </div>
@@ -113,7 +113,7 @@
          <div class="luxury-right" data-aos="fade-left">
             <div class="luxury-text">
                <h3>
-                <a href="" target="_blank">
+                <a href="javascript:void(0)">
                     Kakslauttanen Arctic Resort
                 </a>
                </h3>
@@ -176,7 +176,7 @@
       <div class="luxury-wrap" data-aos="fade-up">
         <div class="luxury-left" data-aos="fade-right">
            <div class="luxury-img">
-             <a href="" target="_blank">
+             <a href="javascript:void(0)">
                <img src="assets/images/Scenic-Card-2.jpg" alt="">
              </a>
            </div>
@@ -184,7 +184,7 @@
         <div class="luxury-right" data-aos="fade-left">
            <div class="luxury-text">
               <h3>
-               <a href="" target="_blank">
+               <a href="javascript:void(0)">
                 Hotel Iso-Syöte
                </a>
               </h3>
@@ -384,7 +384,7 @@
    <div class="luxury-wrap" data-aos="fade-up">
     <div class="luxury-left" data-aos="fade-right">
        <div class="luxury-img">
-         <a href="" target="_blank">
+         <a href="javascript:void(0)">
            <img src="assets/images/Scenic-Card-5.jpg" alt="">
          </a>
        </div>
@@ -392,7 +392,7 @@
     <div class="luxury-right" data-aos="fade-left">
        <div class="luxury-text">
           <h3>
-           <a href="" target="_blank">
+           <a href="javascript:void(0)">
             Arctic TreeHouse Hotel
            </a>
           </h3>
@@ -454,7 +454,7 @@
  <div class="luxury-wrap" data-aos="fade-up">
   <div class="luxury-left" data-aos="fade-right">
      <div class="luxury-img">
-       <a href="" target="_blank">
+       <a href="javascript:void(0)">
          <img src="assets/images/Scenic-Card-6.jpg" alt="">
        </a>
      </div>
@@ -462,7 +462,7 @@
   <div class="luxury-right" data-aos="fade-left">
      <div class="luxury-text">
         <h3>
-         <a href="" target="_blank">
+         <a href="javascript:void(0)">
           Saariselkä Inn
          </a>
         </h3>
@@ -524,7 +524,7 @@
 <div class="luxury-wrap" data-aos="fade-up">
   <div class="luxury-left" data-aos="fade-right">
      <div class="luxury-img">
-       <a href="" target="_blank">
+       <a href="javascript:void(0)">
          <img src="assets/images/Scenic-Card-7.jpg" alt="">
        </a>
      </div>
@@ -532,7 +532,7 @@
   <div class="luxury-right" data-aos="fade-left">
      <div class="luxury-text">
         <h3>
-         <a href="" target="_blank">
+         <a href="javascript:void(0)">
           Hotel Rantasipi Pohjanhovi
          </a>
         </h3>
@@ -664,7 +664,7 @@
 <div class="luxury-wrap" data-aos="fade-up">
   <div class="luxury-left" data-aos="fade-right">
      <div class="luxury-img">
-       <a href="" target="_blank">
+       <a href="javascript:void(0)">
          <img src="assets/images/Scenic-Card-9.jpg" alt="">
        </a>
      </div>
@@ -672,7 +672,7 @@
   <div class="luxury-right" data-aos="fade-left">
      <div class="luxury-text">
         <h3>
-         <a href="" target="_blank">
+         <a href="javascript:void(0)">
           Ylläs Saaga
          </a>
         </h3>
